# ferrovia

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/ferrovia-cli/: Cargo.toml
crates/ferrovia-cli/src/: main.rs
crates/ferrovia-cli/tests/: smoke.rs  surface.rs
crates/ferrovia-core/: Cargo.toml
crates/ferrovia-core/examples/: direct_port_spike.rs
crates/ferrovia-core/src/: ast.rs  builtin.rs  config.rs  error.rs  geometry.rs  lib.rs  optimize.rs  parser.rs  path.rs  plugins.rs  serializer.rs  stringifier.rs  style.rs  svgo_spike.rs  types.rs  xast.rs  xmltokenizer.rs
crates/ferrovia-core/src/plugins/: _collections.rs  _path.rs  _transforms.rs  apply_transforms.rs  mod.rs  remove_attributes_by_selector.rs  remove_attrs.rs  remove_comments.rs  remove_deprecated_attrs.rs  remove_desc.rs  remove_dimensions.rs  remove_doctype.rs  remove_editors_ns_data.rs  remove_elements_by_attr.rs  remove_empty_attrs.rs  remove_empty_containers.rs  remove_empty_text.rs  remove_metadata.rs  remove_off_canvas_paths.rs  remove_raster_images.rs  remove_scripts.rs  remove_style_element.rs  remove_title.rs  remove_unused_ns.rs  remove_view_box.rs  remove_xlink.rs  remove_xml_proc_inst.rs  remove_xmlns.rs
crates/ferrovia-core/src/svgo/: css_select_adapter.rs  mod.rs  plugins.rs  tools.rs
crates/ferrovia-core/src/util/: map_nodes_to_parents.rs  mod.rs  visit.rs
crates/ferrovia-core/tests/: core.rs  corpus.rs  direct_port_helpers.rs  malformed.rs  minimal_port.rs  path_style.rs  preset_default.rs  remove_attributes_by_selector.rs  remove_attrs.rs  remove_deprecated_attrs.rs  remove_elements_by_attr.rs  remove_empty_containers.rs  remove_off_canvas_paths.rs  remove_raster_images.rs  remove_scripts.rs  remove_style_element.rs  remove_unused_ns.rs  remove_view_box.rs  remove_xlink.rs  remove_xmlns.rs  simple_cleanup_plugins.rs  upstream.rs  xast_queries.rs
crates/ferrovia-css-select-compat/: Cargo.toml
crates/ferrovia-css-select-compat/src/: lib.rs
crates/ferrovia-css-select-compat/tests/: select.rs
crates/ferrovia-css-tree-compat/: Cargo.toml
crates/ferrovia-css-tree-compat/src/: lib.rs
crates/ferrovia-css-what-compat/: Cargo.toml
crates/ferrovia-css-what-compat/src/: lib.rs
crates/ferrovia-css-what-compat/tests/: parse.rs
crates/ferrovia-csso-compat/: Cargo.toml
crates/ferrovia-csso-compat/src/: lib.rs
crates/ferrovia-napi/: Cargo.toml
crates/ferrovia-napi/src/: lib.rs
crates/ferrovia-sax-compat/: Cargo.toml
crates/ferrovia-sax-compat/src/: lib.rs
docs/: oss-rust-landscape.md
docs/adr/: 0001-product-scope-and-compatibility-target.md  0002-core-document-model-and-parser-strategy.md  0003-verification-and-regression-oracle.md  0004-public-surfaces-and-packaging.md  0005-config-and-plugin-model.md  0006-delivery-and-commit-discipline.md  0007-wave-ordering-and-commit-strategy.md  0008-tree-rewrite-mutation-rules.md  0009-minimal-semantic-collections.md  0010-dependency-leverage-and-oss-adoption.md  0011-minimal-css-stylesheet-model.md  0012-semantic-direct-port-spike.md  0013-direct-port-rewrite-reset.md  README.md
docs/plans/: 2026-03-21-oss-adoption-spikes-design.md  2026-03-23-parity-master-plan.md  2026-03-24-direct-port-rewrite-master-plan.md  2026-03-24-svgo-direct-port-spike-design.md  2026-03-24-svgo-direct-port-spike-report.md
scripts/: bench-current-corpus.sh  bench-fixture.sh  check-regressions.sh  check-svgo-test-suite.sh  compare-direct-port-spike.mjs  run-svgo-oracle.mjs  triage-svgo-corpus.mjs
tests/: node-load-config.mjs  node-smoke.mjs
tests/fixtures/oracle/: cleanup-enable-background.config.json  cleanup-ids.config.json  cleanup-numeric-values.config.json  collapse-groups.config.json  convert-ellipse-to-circle.config.json  convert-path-data.config.json  convert-shape-to-path.config.json  convert-transform.config.json  inline-styles.config.json  merge-paths-force.config.json  merge-paths.config.json  merge-styles.config.json  minify-styles.config.json  move-elems-attrs-to-group.config.json  move-group-attrs-to-elems.config.json  remove-comments.config.json  remove-desc-empty.config.json  remove-dimensions.config.json  remove-empty-containers.config.json  remove-hidden-elems.config.json  remove-non-inheritable-group-attrs.config.json  remove-unknowns-and-defaults.config.json  remove-useless-stroke-and-fill.config.json  remove-xmlns.config.json
tests/fixtures/preset-default/: default.config.json
tests/upstream/svgo-v4.0.1/plugins/: removeUselessDefs.04.svg.txt
