[workspace]
members = [
  "crates/ferrovia-core",
  "crates/ferrovia-cli",
  "crates/ferrovia-napi",
  "crates/ferrovia-sax-compat",
  "crates/ferrovia-css-what-compat",
  "crates/ferrovia-css-select-compat",
  "crates/ferrovia-css-tree-compat",
  "crates/ferrovia-csso-compat",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/sebastian-software/ferrovia"
authors = ["Sebastian Software GmbH, Mainz, Germany"]

[workspace.dependencies]
simplecss = "0.2.2"
memchr = "2.7.4"
napi = { version = "3.3.0", default-features = false, features = ["napi9", "serde-json"] }
napi-build = "2.1.5"
napi-derive = "3.2.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
regex = "1.12.2"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.lints.rust]
unsafe_code = "deny"
