[package]
name = "ferrovia-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for the ferrovia SVGO-compatible Rust port"

[dependencies]
ferrovia-core = { path = "../ferrovia-core" }
serde_json.workspace = true

[lints]
workspace = true
