[package]
name = "ferrovia-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core SVG optimizer library for the ferrovia SVGO-compatible Rust port"

[dependencies]
memchr.workspace = true
serde.workspace = true
serde_json.workspace = true
simplecss.workspace = true
svgtypes.workspace = true
thiserror.workspace = true
xmlparser.workspace = true

[lints]
workspace = true
