[package]
name = "ferrovia-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core SVG optimizer library for the ferrovia SVGO-compatible Rust port"

[dependencies]
ferrovia-css-select-compat = { path = "../ferrovia-css-select-compat" }
ferrovia-css-what-compat = { path = "../ferrovia-css-what-compat" }
ferrovia-sax-compat = { path = "../ferrovia-sax-compat" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
