[package]
name = "ferrovia-css-select-compat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Placeholder css-select compatibility layer for the ferrovia SVGO direct port"

[dependencies]
ferrovia-css-what-compat = { path = "../ferrovia-css-what-compat" }

[lints]
workspace = true
