[package]
name = "ferrovia-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ferrovia-core = { path = "../ferrovia-core" }
napi.workspace = true
napi-derive.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build.workspace = true

[lints]
workspace = true

