[package]
name = "ferrovia-sax-compat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Minimal SAX-compatible parser layer for the ferrovia SVGO direct port"

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
